_generated-doc/2.13/config/quarkus-webauthn-security-webauthn-web-authn-run-time-config.adoc

:summaryTableId: quarkus-webauthn-security-webauthn-web-authn-run-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-webauthn-security-webauthn-web-authn-run-time-config_configuration]]link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.origin]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.origin[quarkus.webauthn.origin]`

[.description]
--
The origin of the application. The origin is basically protocol, host and port. If you are calling WebAuthn API while your application is located at `https://example.com/login`, then origin will be `https://example.com`. If you are calling from `http://localhost:2823/test`, then the origin will be `http://localhost:2823`. Please note that WebAuthn API will not work on pages loaded over HTTP, unless it is localhost, which is considered secure context.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_ORIGIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_ORIGIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.transports]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.transports[quarkus.webauthn.transports]`

[.description]
--
Authenticator Transports allowed by the application. Authenticators can interact with the user web browser through several transports. Applications may want to restrict the transport protocols for extra security hardening reasons. By default, all transports should be allowed. If your application is to be used by mobile phone users, you may want to restrict only the `INTERNAL` authenticator to be allowed. Permitted values are:  
 - `USB` - USB connected authenticators (e.g.: Yubikey's) 
 - `NFC` - NFC connected authenticators (e.g.: Yubikey's) 
 - `BLE` - Bluetooth LE connected authenticators 
 - `INTERNAL` - Hardware security chips (e.g.: Intel TPM2.0)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_TRANSPORTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_TRANSPORTS+++`
endif::add-copy-button-to-env-var[]
--|list of link:https://vertx.io/docs/apidocs/io/vertx/ext/auth/webauthn/AuthenticatorTransport.html[AuthenticatorTransport]
 
|`USB,NFC,BLE,INTERNAL`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.relying-party.id]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.relying-party.id[quarkus.webauthn.relying-party.id]`

[.description]
--
The id (or domain name of your server)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_RELYING_PARTY_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_RELYING_PARTY_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.relying-party.name]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.relying-party.name[quarkus.webauthn.relying-party.name]`

[.description]
--
A user friendly name for your server

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_RELYING_PARTY_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_RELYING_PARTY_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Quarkus server`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.authenticator-attachment]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.authenticator-attachment[quarkus.webauthn.authenticator-attachment]`

[.description]
--
Kind of Authenticator Attachment allowed. Authenticators can connect to your device in two forms:  
 - `PLATFORM` - The Authenticator is built-in to your device (e.g.: Security chip) 
 - `CROSS_PLATFORM` - The Authenticator can roam across devices (e.g.: USB Authenticator)  For security reasons your application may choose to restrict to a specific attachment mode. If omitted, then any mode is permitted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_AUTHENTICATOR_ATTACHMENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_AUTHENTICATOR_ATTACHMENT+++`
endif::add-copy-button-to-env-var[]
-- a|
`platform`, `cross-platform` 
|


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.require-resident-key]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.require-resident-key[quarkus.webauthn.require-resident-key]`

[.description]
--
Resident key required. A resident (private) key, is a key that cannot leave your authenticator device, this means that you cannot reuse the authenticator to log into a second computer.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_REQUIRE_RESIDENT_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_REQUIRE_RESIDENT_KEY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.user-verification]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.user-verification[quarkus.webauthn.user-verification]`

[.description]
--
User Verification requirements. Webauthn applications may choose `REQUIRED` verification to assert that the user is present during the authentication ceremonies, but in some cases, applications may want to reduce the interactions with the user, i.e.: prevent the use of pop-ups. Valid values are:  
 - `REQUIRED` - User must always interact with the browser 
 - `PREFERRED` - User should always interact with the browser 
 - `DISCOURAGED` - User should avoid interact with the browser

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_USER_VERIFICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_USER_VERIFICATION+++`
endif::add-copy-button-to-env-var[]
-- a|
`required`, `preferred`, `discouraged` 
|`required`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.timeout]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.timeout[quarkus.webauthn.timeout]`

[.description]
--
Non-negative User Verification timeout. Authentication must occur within the timeout, this will prevent the user browser from being blocked with a pop-up required user verification, and the whole ceremony must be completed within the timeout period. After the timeout, any previously issued challenge is automatically invalidated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60s`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.attestation]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.attestation[quarkus.webauthn.attestation]`

[.description]
--
Device Attestation Preference. During registration, applications may want to attest the device. Attestation is a cryptographic verification of the authenticator hardware. Attestation implies that the privacy of the users may be exposed and browsers might override the desired configuration on the user's behalf. Valid values are:  
 - `NONE` - no attestation data is sent with registration 
 - `INDIRECT` - attestation data is sent with registration, yielding anonymized data by a trusted CA 
 - `DIRECT` - attestation data is sent with registration 
 - `ENTERPRISE` - no attestation data is sent with registration. The device AAGUID is returned unaltered.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_ATTESTATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_ATTESTATION+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `indirect`, `direct`, `enterprise` 
|`none`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.pub-key-cred-params]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.pub-key-cred-params[quarkus.webauthn.pub-key-cred-params]`

[.description]
--
Allowed Public Key Credential algorithms by preference order. Webauthn mandates that all authenticators must support at least the following 2 algorithms: `ES256` and `RS256`. Applications may require stronger keys and algorithms, for example: `ES512` or `EdDSA`. Note that the use of stronger algorithms, e.g.: `EdDSA` may require Java 15 or a cryptographic `JCE` provider that implements the algorithms.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_PUB_KEY_CRED_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_PUB_KEY_CRED_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|list of link:https://vertx.io/docs/apidocs/io/vertx/ext/auth/webauthn/PublicKeyCredential.html[PublicKeyCredential]
 
|`ES256,RS256`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.challenge-length]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.challenge-length[quarkus.webauthn.challenge-length]`

[.description]
--
Length of the challenges exchanged between the application and the browser. Challenges must be at least 32 bytes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_CHALLENGE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_CHALLENGE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|`64`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.login-page]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.login-page[quarkus.webauthn.login-page]`

[.description]
--
The login page

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_LOGIN_PAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_LOGIN_PAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/login.html`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.session-timeout]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.session-timeout[quarkus.webauthn.session-timeout]`

[.description]
--
The inactivity (idle) timeout When inactivity timeout is reached, cookie is not renewed and a new login is enforced.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_SESSION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_SESSION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT30M`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.new-cookie-interval]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.new-cookie-interval[quarkus.webauthn.new-cookie-interval]`

[.description]
--
How old a cookie can get before it will be replaced with a new cookie with an updated timeout, also referred to as "renewal-timeout". Note that smaller values will result in slightly more server load (as new encrypted cookies will be generated more often), however larger values affect the inactivity timeout as the timeout is set when a cookie is generated. For example if this is set to 10 minutes, and the inactivity timeout is 30m, if a users last request is when the cookie is 9m old then the actual timeout will happen 21m after the last request, as the timeout is only refreshed when a new cookie is generated. In other words, no timeout is tracked on the server side; the timestamp is encoded and encrypted in the cookie itself, and it is decrypted and parsed with each request.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_NEW_COOKIE_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_NEW_COOKIE_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT1M`


a| [[quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.cookie-name]]`link:#quarkus-webauthn-security-webauthn-web-authn-run-time-config_quarkus.webauthn.cookie-name[quarkus.webauthn.cookie-name]`

[.description]
--
The cookie that is used to store the persistent session

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_WEBAUTHN_COOKIE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_WEBAUTHN_COOKIE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quarkus-credential`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
